# hang-game

./: CMakeLists.txt  README.md  Resources.qrc  main.cpp
DataBase/: DataBaseManager.cpp  DataBaseManager.h  load_words.py
DataBase/CSV/: easy.csv  hard.csv  medium.csv
Forms/: difficultydialog.ui  mainwindow.ui
GUI/Forms/: addcustomworddialog.ui  difficultydialog.ui  mainwindow.ui  mainwindow.ui.autosave
GUI/Source/: mainwindow.cpp  mainwindow.h
GUI/Source/windows/: addcustomworddialog.cpp  addcustomworddialog.h  difficultydialog.cpp  difficultydialog.h
GameController/: GameController.cpp  GameController.h
GameLogic/: Game.cpp  Game.h
Source/: main.cpp  mainwindow.cpp  mainwindow.h
Source/windows/: difficultydialog.cpp
